--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
-</head>
-<body>
-    <h1>Document</h1>
-    <script>
-        const socket = io("http://localhost:3000/"); 
-        socket.on('message', (data)=>{
-            console.log(data)
-        })
-    </script>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
+    </head>
+
+    <body>
+        <h1>Document</h1>
+        <script>
+            const socket = io("http://localhost:3000/arduino");
+            socket.on('arduinomessage', (data) => {
+                console.log(data)
+            })
+        </script>
+    </body>
+
 </html>
